# seml-ecommerce-reco

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  submission_details.json
.github/workflows/: ci.yml
.streamlit/: config.toml
archive/: IMPLEMENTATION_README.md  README.md  START_HERE.md
archive/evidence/: Question Assignment I_extracted.txt  SEML_Assignment_01_Ecommerce_Recommendation_GPT_extracted.txt  demo_output.json  demo_output.txt  offline_metrics.json  sample_output.txt
archive/legacy_prototype/: api_gateway.py  demo_requests.py  quick_test.py  recommendation_api.py  recommender_engine.py  start_services.py
archive/report_tooling/: build_docx_report.py  build_pdf_report.py  build_submission_notebook.py  report_evidence.py
artifacts/: model_metadata.json  recommendation_model.npz
backend/src/ecom_ml/: api_models.py  catalog.py  config.py  users.py
backend/src/ecom_ml/command_service/: main.py
backend/src/ecom_ml/ml/: __init__.py  pipeline.py
backend/src/ecom_ml/query_service/: main.py
backend/tests/: test_services.py
data/: interactions.csv  users.csv
docs/: DOCUMENTATION.md  architecture.md
evidence/: live_demo.json
final_submission/: G049.ipynb  G049_SEML_Assignment_01_Complete_Report.docx
frontend/: app.py
scripts/: generate_evidence.py  run_demo.py  seed_data.py  train_and_evaluate.py  verify_live.py
src/ecom_ml/: __init__.py  api_models.py  config.py
src/ecom_ml/command_service/: __init__.py  main.py
src/ecom_ml/ml/: artifact.py  data.py  evaluation.py  model.py
src/ecom_ml/query_service/: __init__.py  main.py
src/reco/: __init__.py  config.py  logging.py  middleware.py
src/reco/domain/: __init__.py  evaluation.py  exceptions.py  feature_store.py  recommender.py
src/reco/gateway/: __init__.py  auth.py  main.py  rate_limit.py  routes.py  schemas.py
src/reco/recommendation/: __init__.py  consumer.py  main.py  queue.py  routes.py  schemas.py
tests/: conftest.py  test_ml_pipeline.py  test_services.py
tests/integration/: test_gateway_api.py  test_recommendation_api.py
tests/unit/: test_evaluation.py  test_feature_store.py  test_recommender.py
tools/: build_notebook.py  build_report.py  generate_assets.py
