[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seml-ecommerce-reco"
version = "1.0.0"
description = "Industry-shaped e-commerce recommendation system (API Gateway + Event-Driven patterns) for AIMLCZG546 Assignment I."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SEML Assignment Group" }]
keywords = ["recommendation", "collaborative-filtering", "fastapi", "api-gateway", "event-driven"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=2.0",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
evidence = ["matplotlib>=3.9"]

[project.scripts]
reco-demo = "scripts.run_demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reco"]

# --------------------------------------------------------------------------- #
# Ruff: linter + formatter
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are deliberately called in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Security",
]

# --------------------------------------------------------------------------- #
# mypy: static type checking
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["sklearn.*", "matplotlib.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest + coverage
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["reco"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
