[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seml-ecommerce-reco"
version = "1.0.0"
description = "SEML Assignment I e-commerce recommender using Microservices and CQRS."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AIMLCZG546 Group 049" }]
keywords = ["recommendation", "collaborative-filtering", "fastapi", "microservices", "cqrs"]
dependencies = [
    "fastapi==0.137.2",
    "httpx==0.28.1",
    "numpy==2.4.6",
    "pydantic==2.13.4",
    "scikit-learn==1.9.0",
    "streamlit==1.58.0",
    "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11,<2.2",
    "pre-commit>=4,<5",
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.15,<0.16",
]
report = [
    "ipykernel>=6.29,<8",
    "matplotlib>=3.9,<3.12",
    "nbclient>=0.10,<1",
    "nbformat>=5.10,<6",
    "pillow>=11,<13",
    "python-docx>=1.1,<2",
    "reportlab>=4.2,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/ecom_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src", "backend/tests", "frontend", "scripts", "tools"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RET", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tools/build_report.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["backend/src", "frontend", "scripts"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["sklearn.*", "matplotlib.*", "docx.*", "PIL.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["ecom_ml"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
